src/test/deca/syntax/invalid/intermediaire2/arithmetiques/00plusIncomplete.deca
// Description:
//    tests de programme incorrect lexicalement (operation sans operande de droite)
//
// Resultats:
//  00plusIncomplete.deca:12:11:
//
// Historique:
//    cree le 08/06/2022

{
    int x;
    x = 1 +;
}
